testdata/parser/negative/17.pdl
#version 100

// illegal assignment
primitive main(in a, out b) {
	int x = 0;
	int y = 0;
	x + y = 0;
}